# learn_cpp

./: .gitignore
.devcontainer/: devcontainer.json
1_cmake_project/: CMakeLists.txt  main.cpp
2_test_vcpkg/: 2_test_vcpkg.cpp  2_test_vcpkg.h  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
3_vcpkg_clion_test/: CMakeLists.txt  main.cpp  vcpkg.json
4_learn_cmake/: CMakeLists.txt  main.cpp  vcpkg.json
4_learn_cmake/include/: config.h.in
